--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,10 +14,12 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.1",
     "morgan": "^1.10.1",
     "nodemon": "^3.1.11",
+    "passport": "^0.7.0",
     "winston": "^3.19.0"
   }
 }
