--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.10.1",
     "nodemon": "^3.1.11",
     "passport": "^0.7.0",
+    "socket.io": "^4.8.3",
     "winston": "^3.19.0"
   }
 }
